--- a/src/Pages/Homepage/DetailedLive/styles/Card.css
+++ b/src/Pages/Homepage/DetailedLive/styles/Card.css
@@ -6,6 +6,10 @@
     color: rgba(255, 255, 255, 0.87);
 }
 
+.cdh{
+    width: 500px;
+}
+
 .card-top{
     height: 30%;
     width: 100%;
@@ -51,4 +55,23 @@
 
 .green-signal{
     border-left: 5px solid green;
+}
+
+
+@media all and (max-width:600px){
+    .card-hero{
+        width: 90%;
+    }
+    .cdh{
+        width: 400px;
+    }
+}
+
+@media all and (max-width:400px){
+    .card-hero{
+        width: 90%;
+    }
+    .cdh{
+        width: 300px;
+    }
 }
