--- a/src/Pages/Homepage/styles/Homepage.css
+++ b/src/Pages/Homepage/styles/Homepage.css
@@ -3,6 +3,19 @@
     flex-direction: column;
     width: 100%;
 }
+.cn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.home-hero{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
 
 .navpart{
     width: 100%;
